- [FIX] End tag of the asp:panel control was left out on page when it shouldn't have. - [FIX] Excluding database xml type columns from display in the EntityGridView control. - [FIX] Fixed word-wrap on admin leftnav menu.

--- a/templates/netTiers2/0.9.5/ASP.NET/Common/App_Themes/Default.css
+++ b/templates/netTiers2/0.9.5/ASP.NET/Common/App_Themes/Default.css
@@ -1,4 +1,4 @@
-body {margin:0px; background-color:#D8D8D8;}
+body {margin:0px; background-color:#D8D8D8;word-wrap:break-word;}
 body,td {font-family:verdana,arial,sans-serif; font-size:11px; }
 h1,h2,h3,h4,h5,h6 {font-family:"Trebuchet MS",helvetica,sans-serif; color:#FF8000; letter-spacing:1px;  }
 h1 {font-size:22px;}
